Update title and header in index.html

--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>CheeseNCookies CV</title>
+    <title>CheeseKa CV</title>
     <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
-    <h1>CheeseNCookies</h1>
+    <h1>Franchesca E. Ramirez</h1>
     <ul class="navbar">
         <li class="currentpg">Personal Data</li>
         <li><a href="educ_bg.html">Educational Background</a></li>
         <li><a href="fieldOfStudy.html">Field of Study</a></li>
     </ul>
     <div class="container">
-    <img src="cheese.png" class="myimage">
+    <img src="chesca.png" class="myimage">
     <div class="persbg">
     <p>Date of Birth: March 8,2006</p>
     <br>
